[package]
name = "solgregator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"
diesel = { version = "2.2.0", features = ["postgres"] }
actix-web = "4.9.0"
sysinfo = "0.31.2"
dotenv = "0.15.0"
